// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Alert Alert 1`] = `
<div
  alertid="test_id"
  class="rpl-alert-base rpl-alert rpl-alert-base--color-danger"
  data-alert-type="Emergency"
  role="alert"
>
  <!---->
   
  <div
    class="rpl-alert-base__content rpl-alert-base__content--color-white"
  >
    <span
      class="rpl-alert__title"
    >
      This is an emergency alert.
    </span>
     
    <a
      class="rpl-link rpl-text-link rpl-alert__link"
      data-print-url="#"
      href="#"
    >
      <span
        class="rpl-link__inner"
      >
        <span
          class="rpl-text-label rpl-text-label--dark"
        >
          <span>
            <span>
              Find out
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               more
              <!---->
            </span>
          </span>
        </span>
      </span>
    </a>
  </div>
   
  <button
    class="rpl-alert-base__close"
  >
    <!---->
    <span>
      Dismiss alert
    </span>
  </button>
</div>
`;

exports[`RippleStoryshots Molecules/Alert Alert Base 1`] = `
<div
  class="rpl-alert-base rpl-alert-base--color-dark_neutral"
>
  <!---->
   
  <div
    class="rpl-alert-base__content rpl-alert-base__content--color-white"
  >
    <div>
      Draft only and not yet published
    </div>
  </div>
   
  <button
    class="rpl-alert-base__close"
  >
    <!---->
    <span>
      Close
    </span>
  </button>
</div>
`;
